# takopi-engine-cursor

./: PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: publish-all.sh  setup-trusted-publishing.sh
src/takopi_engine_cursor/: __init__.py  backend.py  runner.py
tests/: test_cursor_runner.py  test_cursor_schema.py
