[project]
name = "takopi-engine-cursor"
version = "0.2.0"
description = "Takopi engine backend for Cursor Agent CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "takopi>=0.23.0",
  "msgspec>=0.20.0",
  "anyio>=4.12.0",
]

[project.entry-points."takopi.engine_backends"]
cursor = "takopi_engine_cursor.backend:BACKEND"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-anyio>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/takopi_engine_cursor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
