[project]
name = "takopi-engine-cursor"
version = "0.2.0"
description = "Takopi engine backend for Cursor Agent CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "RicardoKLee" }]
dependencies = [
  "takopi>=0.23.0",
  "msgspec>=0.20.0",
  "anyio>=4.12.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RicardoKLee/takopi-engine-cursor"
Repository = "https://github.com/RicardoKLee/takopi-engine-cursor"
Issues = "https://github.com/RicardoKLee/takopi-engine-cursor/issues"

[project.entry-points."takopi.engine_backends"]
cursor = "takopi_engine_cursor.backend:BACKEND"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-anyio>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/takopi_engine_cursor"]

[tool.hatch.build.targets.sdist]
include = ["LICENSE", "README.md", "src/takopi_engine_cursor", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
